--- a/src/sales.html
+++ b/src/sales.html
@@ -116,73 +116,192 @@
           <div class="business-info">
             <h2 class="text-effect">販売実績</h2>
           </div>
+          <ul class="tab-group">
+            <li class="tab tab-A is-active">全ての販売実績</li>
+            <li class="tab tab-B">東京23区内</li>
+            <li class="tab tab-C">東京23区外</li>
+            <li class="tab tab-D">神奈川県</li>
+          </ul>
           <div class="container02">
-
-            <section class="item">
-              <figure>
-                <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
-              </figure>
-              <div class="item-text">
-                <h2 class="text-effect">南品川５丁目 土地</h2>
-                <p class="text-effect">成約済／品川区／駅７分／ワイドスパン</p>
-                <p class="text-effect">「大井町」駅徒歩７分</p>
-                <p class="text-effect">近隣商業地域・３種高度地区</p>
-                <p class="text-effect">間口が広く解放感がある土地</p>
+            <div class="panel-group">
+              <!-- 全ての販売実績 -->
+              <div class="panel tab-A is-show">
+                <div class="container02-inner">
+                  <section class="item">
+                    <figure>
+                      <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                    </figure>
+                    <div class="item-text">
+                      <h2 class="text-effect">南品川５丁目 土地</h2>
+                      <p class="text-effect">成約済／品川区／駅７分／ワイドスパン</p>
+                      <p class="text-effect">「大井町」駅徒歩７分</p>
+                      <p class="text-effect">近隣商業地域・３種高度地区</p>
+                      <p class="text-effect">間口が広く解放感がある土地</p>
+                    </div>
+                  </section>
+  
+                  <section class="item">
+                    <figure>
+                      <img src="./assets/images/sales/sales-minamisenzoku.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                    </figure>
+                    <div class="item-text">
+                      <h2 class="text-effect">南千束３丁目 土地</h2>
+                      <p class="text-effect">成約済／大田区／南道路／高台</p>
+                      <p class="text-effect">日当たりの良い南公道面</p>
+                      <p class="text-effect">洗足池公園や大岡山駅徒歩圏</p>
+                      <p class="text-effect">洗足池小学校学区域</p>
+                    </div>
+                  </section>
+  
+                  <section class="item">
+                    <figure>
+                      <img src="./assets/images/sales/sales-morishita.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                    </figure>
+                    <div class="item-text">
+                      <h2 class="text-effect">森下２丁目 戸建</h2>
+                      <p class="text-effect">成約済／江東区／駅１分</p>
+                      <p class="text-effect">「森下」駅徒歩１分</p>
+                      <p class="text-effect">繁華街が近い・静かな立地</p>
+                      <p class="text-effect">近くに緑道や神社があり風情がある街並み</p>
+                    </div>
+                  </section>
+  
+                  <section class="item">
+                    <figure>
+                      <img src="./assets/images/sales/sales-ebisu.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                    </figure>
+                    <div class="item-text">
+                      <h2 class="text-effect">恵比寿南３丁目 土地</h2>
+                      <p class="text-effect">成約済／渋谷区／駅５分／高台</p>
+                      <p class="text-effect">「代官山」「恵比寿」駅が徒歩５分</p>
+                      <p class="text-effect">静かな高台の立地</p>
+                      <p class="text-effect">コンビニや飲食店が立ち並ぶ駒沢通り至近</p>
+                    </div>
+                  </section>
+  
+                  <section class="item">
+                    <figure>
+                      <img src="./assets/images/sales/sales-nihonbashi.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                    </figure>
+                    <div class="item-text">
+                      <h2 class="text-effect">日本橋久松町 土地</h2>
+                      <p class="text-effect">成約済／中央区／駅５分／ワイドスパン</p>
+                      <p class="text-effect">「人形町」駅徒歩５分・複数路線利用可</p>
+                      <p class="text-effect">久松小学校学区域</p>
+                      <p class="text-effect">土地間口が広く開放感がある</p>
+                      <p class="text-effect">下町と都会が共存した活気ある街並み</p>
+                    </div>
+                  </section>
+                </div>
               </div>
-            </section>
 
-            <section class="item">
-              <figure>
-                <img src="./assets/images/sales/sales-minamisenzoku.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
-              </figure>
-              <div class="item-text">
-                <h2 class="text-effect">南千束３丁目 土地</h2>
-                <p class="text-effect">成約済／大田区／南道路／高台</p>
-                <p class="text-effect">日当たりの良い南公道面</p>
-                <p class="text-effect">洗足池公園や大岡山駅徒歩圏</p>
-                <p class="text-effect">洗足池小学校学区域</p>
+              <!-- 東京23区内 -->
+              <div class="panel tab-B">
+                <div class="container02-inner">
+                  <section class="item">
+                    <figure>
+                      <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                    </figure>
+                    <div class="item-text">
+                      <h2 class="text-effect">南品川５丁目 土地</h2>
+                      <p class="text-effect">成約済／品川区／駅７分／ワイドスパン</p>
+                      <p class="text-effect">「大井町」駅徒歩７分</p>
+                      <p class="text-effect">近隣商業地域・３種高度地区</p>
+                      <p class="text-effect">間口が広く解放感がある土地</p>
+                    </div>
+                  </section>
+  
+                  <section class="item">
+                    <figure>
+                      <img src="./assets/images/sales/sales-minamisenzoku.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                    </figure>
+                    <div class="item-text">
+                      <h2 class="text-effect">南千束３丁目 土地</h2>
+                      <p class="text-effect">成約済／大田区／南道路／高台</p>
+                      <p class="text-effect">日当たりの良い南公道面</p>
+                      <p class="text-effect">洗足池公園や大岡山駅徒歩圏</p>
+                      <p class="text-effect">洗足池小学校学区域</p>
+                    </div>
+                  </section>
+  
+                  <section class="item">
+                    <figure>
+                      <img src="./assets/images/sales/sales-morishita.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                    </figure>
+                    <div class="item-text">
+                      <h2 class="text-effect">森下２丁目 戸建</h2>
+                      <p class="text-effect">成約済／江東区／駅１分</p>
+                      <p class="text-effect">「森下」駅徒歩１分</p>
+                      <p class="text-effect">繁華街が近い・静かな立地</p>
+                      <p class="text-effect">近くに緑道や神社があり風情がある街並み</p>
+                    </div>
+                  </section>
+  
+                  <section class="item">
+                    <figure>
+                      <img src="./assets/images/sales/sales-ebisu.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                    </figure>
+                    <div class="item-text">
+                      <h2 class="text-effect">恵比寿南３丁目 土地</h2>
+                      <p class="text-effect">成約済／渋谷区／駅５分／高台</p>
+                      <p class="text-effect">「代官山」「恵比寿」駅が徒歩５分</p>
+                      <p class="text-effect">静かな高台の立地</p>
+                      <p class="text-effect">コンビニや飲食店が立ち並ぶ駒沢通り至近</p>
+                    </div>
+                  </section>
+  
+                  <section class="item">
+                    <figure>
+                      <img src="./assets/images/sales/sales-nihonbashi.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                    </figure>
+                    <div class="item-text">
+                      <h2 class="text-effect">日本橋久松町 土地</h2>
+                      <p class="text-effect">成約済／中央区／駅５分／ワイドスパン</p>
+                      <p class="text-effect">「人形町」駅徒歩５分・複数路線利用可</p>
+                      <p class="text-effect">久松小学校学区域</p>
+                      <p class="text-effect">土地間口が広く開放感がある</p>
+                      <p class="text-effect">下町と都会が共存した活気ある街並み</p>
+                    </div>
+                  </section>
+                </div>
               </div>
-            </section>
 
-            <section class="item">
-              <figure>
-                <img src="./assets/images/sales/sales-morishita.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
-              </figure>
-              <div class="item-text">
-                <h2 class="text-effect">森下２丁目 戸建</h2>
-                <p class="text-effect">成約済／江東区／駅１分</p>
-                <p class="text-effect">「森下」駅徒歩１分</p>
-                <p class="text-effect">繁華街が近い・静かな立地</p>
-                <p class="text-effect">近くに緑道や神社があり風情がある街並み</p>
+              <!-- 東京23区外 -->
+              <div class="panel tab-C">
+                <div class="container02-inner">
+                  <!-- <section class="item">
+                    <figure>
+                      <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                    </figure>
+                    <div class="item-text">
+                      <h2 class="text-effect">南品川５丁目 土地</h2>
+                      <p class="text-effect">成約済／品川区／駅７分／ワイドスパン</p>
+                      <p class="text-effect">「大井町」駅徒歩７分</p>
+                      <p class="text-effect">近隣商業地域・３種高度地区</p>
+                      <p class="text-effect">間口が広く解放感がある土地</p>
+                    </div>
+                  </section> -->
+                </div>
               </div>
-            </section>
 
-            <section class="item">
-              <figure>
-                <img src="./assets/images/sales/sales-ebisu.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
-              </figure>
-              <div class="item-text">
-                <h2 class="text-effect">恵比寿南３丁目 土地</h2>
-                <p class="text-effect">成約済／渋谷区／駅５分／高台</p>
-                <p class="text-effect">「代官山」「恵比寿」駅が徒歩５分</p>
-                <p class="text-effect">静かな高台の立地</p>
-                <p class="text-effect">コンビニや飲食店が立ち並ぶ駒沢通り至近</p>
+              <!-- 神奈川県 -->
+              <div class="panel tab-D">
+                <div class="container02-inner">
+                  <!-- <section class="item">
+                    <figure>
+                      <img src="./assets/images/sales/sales-minamishinagawa.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
+                    </figure>
+                    <div class="item-text">
+                      <h2 class="text-effect">南品川５丁目 土地</h2>
+                      <p class="text-effect">成約済／品川区／駅７分／ワイドスパン</p>
+                      <p class="text-effect">「大井町」駅徒歩７分</p>
+                      <p class="text-effect">近隣商業地域・３種高度地区</p>
+                      <p class="text-effect">間口が広く解放感がある土地</p>
+                    </div>
+                  </section> -->
+                </div>
               </div>
-            </section>
-
-            <section class="item">
-              <figure>
-                <img src="./assets/images/sales/sales-nihonbashi.webp" alt="TO PLACE株式会社販売実績イメージ写真" class="hover-image">
-              </figure>
-              <div class="item-text">
-                <h2 class="text-effect">日本橋久松町 土地</h2>
-                <p class="text-effect">成約済／中央区／駅５分／ワイドスパン</p>
-                <p class="text-effect">「人形町」駅徒歩５分・複数路線利用可</p>
-                <p class="text-effect">久松小学校学区域</p>
-                <p class="text-effect">土地間口が広く開放感がある</p>
-                <p class="text-effect">下町と都会が共存した活気ある街並み</p>
-              </div>
-            </section>
+            </div>
 
           </div>
 
